yaml/minio/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: minio.domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
